# cedilla

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  dev.mariinkys.Cedilla.json  justfile
frostmark/: Cargo.toml
frostmark/src/: lib.rs  renderer.rs  state.rs  structs.rs  style.rs  typst_world.rs  widgets.rs
frostmark/src/renderer/: ruby.rs  table.rs  typst.rs
i18n/cs/: cedilla.ftl
i18n/en/: cedilla.ftl
i18n/pt-BR/: cedilla.ftl
i18n/sv/: cedilla.ftl
i18n/uk/: cedilla.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  flags.rs  icons.rs  key_binds.rs  main.rs
src/app/: app_menu.rs  core.rs  dialogs.rs  widgets.rs
src/app/core/: editor.rs  history.rs  preview.rs  project.rs  utils.rs
src/app/core/utils/: files.rs  images.rs  markdown.rs  pdf.rs  project.rs  scroll.rs  search.rs
src/app/update/: config.rs  dialog.rs  editor.rs  file.rs  menu.rs  others.rs  preview.rs  ui.rs  vault.rs
src/app/widgets/: markdown.rs  sensor.rs  text_editor.rs
widgets/: Cargo.toml
widgets/src/: lib.rs  text_editor.rs
