[package]
name = "cedilla"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A markdown text editor for the COSMIC™ desktop"
repository = "https://github.com/mariinkys/cedilla"

[dependencies]
futures-util = "0.3.32"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.3"
rust-embed = "8.11.0"

# Added by me
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["fs"] }
anywho = "0.1.2"
pulldown-cmark = "0.13.0"
url = "2.5.8"
reqwest = "0.13.2"
image = "0.25.9"
dirs = "6.0.0"
ignore = "0.4.25"
slotmap = "1.1.1"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
   "a11y",
   # About widget for the app
   "about",
   # Uses cosmic-settings-daemon to watch for config file changes
   "dbus-config",
   # Support creating additional application windows.
   "multi-window",
   # On app startup, focuses an existing instance if the app is already open
   "single-instance",
   # Uses tokio as the executor for the runtime
   "tokio",
   # Windowing support for X11, Windows, Mac, & Redox
   "winit",
   # Add Wayland support to winit
   "wayland",
   # GPU-accelerated rendering
   "wgpu",
   # XDG portal integration for Flatpak theme detection
   "xdg-portal",
   # Highlighter support
   "highlighter",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
