[package]
name = "frostmark"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "HTML/Markdown renderer for libcosmic"

[dependencies]
libcosmic.workspace = true
html5ever = "0.39"
markup5ever_rcdom = "0.39.0"
bitflags = "2.13.0"

comrak = { version = "0.53", default-features = false, optional = true }
widgets = { path = "../widgets" }

typst = "0.15.0"
typst-render = "0.15.0"
typst-layout = "0.15.0"
typst-assets = { version = "0.15.0", features = ["fonts"] }

[dev-dependencies]
tokio.workspace = true
reqwest.workspace = true
open.workspace = true

[features]
default = ["markdown", "libcosmic-wgpu", "libcosmic-tokio", "libcosmic-windowing"]
markdown = ["dep:comrak"]
libcosmic-wgpu = ["libcosmic/wgpu"]
libcosmic-tokio = ["libcosmic/tokio"]
libcosmic-windowing = ["libcosmic/x11", "libcosmic/wayland"]
